--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -33,7 +33,7 @@
 	clear: both;
 }
 
-#page-tite {
+#page-title {
 	text-align: center;
 
 	h1.page-title {
