--- a/sass/components/_tabs.scss
+++ b/sass/components/_tabs.scss
@@ -27,7 +27,7 @@
 			float: left;
 			font-weight: bold;
 			margin: 0;
-			padding: 0 0 6px 0;
+			padding: 0;
 			text-decoration: none;
 			white-space: nowrap;
 			color: #27638c;
@@ -39,6 +39,7 @@
 			&.active {
 				border-bottom: 4px solid #94ce18;
 				color: #4a95c8;
+				background-color: transparent;
 			}
 		}
 	}
